--- a/package.json
+++ b/package.json
@@ -35,5 +35,8 @@
     "request": "^2.58.0",
     "sqs-worker": "0.0.2",
     "underscore": "^1.8.3"
+  },
+  "devDependencies": {
+    "chai": "^3.4.1"
   }
 }
