--- a/package.json
+++ b/package.json
@@ -37,6 +37,9 @@
     "underscore": "^1.8.3"
   },
   "devDependencies": {
-    "chai": "^3.4.1"
+    "chai": "^3.4.1",
+    "nock": "^3.4.0",
+    "sinon": "^1.17.2",
+    "sinon-chai": "^2.8.0"
   }
 }
